--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^16.18.11",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
+    "@types/uuid": "^9.0.0",
     "antd": "^5.1.7",
     "axios": "^0.27.2",
     "classnames": "^2.3.2",
@@ -26,6 +27,7 @@
     "redux-thunk": "^2.4.1",
     "reselect": "^4.1.7",
     "typescript": "^4.9.5",
+    "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
